legacy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cognitive-guardrails
  labels:
    app: cognitive-guardrails
    source: hsrn-tutorial
spec:
  type: ClusterIP # This is the default, a virtual IP address will be allocated
  selector:
    # This is how the Service will find the Pods
    app: cognitive-guardrails
  ports:
    - name: web
      protocol: TCP
      port: 80 # The port exposed by the service
      targetPort: 80 # The port or port name of the Pod
