legacy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cognitive-guardrails
  labels:
    app: cognitive-guardrails
    source: hsrn-tutorial
  annotations:
    # Use the HAProxy ingress controller (currently the only option)
    kubernetes.io/ingress.class: haproxy
    # Instruct HAProxy to redirect HTTP to HTTPS, with the 301 "permanent" code
    haproxy.org/ssl-redirect: "true"
    haproxy.org/ssl-redirect-code: "301"
    # Instruct HAProxy to provide the end-user's address in the 'X-Forwarded-For' header
    haproxy.org/forwarded-for: "true"
spec:
  rules:
    # You can have multiple rules in one Ingress, or create multiple Ingresses
    - host: cognitive-guardrails.users.hsrn.nyu.edu
      # You are welcome to take advantage of our *.users.hsrn.nyu.edu domain,
      # or you can use your own. In that case, you might have to provide a
      # certificate to enable HTTPS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cognitive-guardrails
                port:
                  number: 80
